<resources>
    <string name="app_name">Android Basics</string>
    <string name="empty_db">No elements in database</string>
    <string name="editor_cancel">Cancel</string>
    <string name="editor_add">Add</string>
    <string name="editor_title">Customize your dog!</string>
    <string name="editor_sub_breed">Sub-breed</string>
    <string name="editor_name">Name</string>
    <string name="editor_breed">Breed</string>
</resources>
