<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".view.DogEditorFragment"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent" >

    <TextView
        android:id="@+id/textView_dogEditor_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:layout_marginBottom="@dimen/large_margin"
        android:text="@string/editor_title"
        android:textAlignment="center"
        android:textSize="@dimen/size_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_dogEditor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:ems="10"
        android:hint="@string/editor_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView_dogEditor_breed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_dogEditor_title"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView_dogEditor_breed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tiny_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:text="@string/editor_breed"
        app:layout_constraintBottom_toTopOf="@+id/textView_dogEditor_subBreed"
        app:layout_constraintStart_toStartOf="@+id/editText_dogEditor_name"
        app:layout_constraintTop_toBottomOf="@+id/editText_dogEditor_name"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed" />

    <Spinner
        android:id="@+id/spinner_dogEditor_breed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView_dogEditor_breed"
        app:layout_constraintEnd_toEndOf="@+id/editText_dogEditor_name"
        app:layout_constraintTop_toTopOf="@+id/textView_dogEditor_breed" />

    <TextView
        android:id="@+id/textView_dogEditor_subBreed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/large_margin"
        android:text="@string/editor_sub_breed"
        app:layout_constraintBottom_toTopOf="@+id/button_dogEditor_cancel"
        app:layout_constraintStart_toStartOf="@+id/textView_dogEditor_breed"
        app:layout_constraintTop_toBottomOf="@+id/textView_dogEditor_breed"
        app:layout_constraintVertical_chainStyle="packed" />

    <Spinner
        android:id="@+id/spinner_dogEditor_subBreed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView_dogEditor_subBreed"
        app:layout_constraintEnd_toEndOf="@+id/spinner_dogEditor_breed"
        app:layout_constraintTop_toTopOf="@+id/textView_dogEditor_subBreed" />

    <Button
        android:id="@+id/button_dogEditor_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="@dimen/small_margin"
        android:text="@string/editor_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_dogEditor_add"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_dogEditor_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/editor_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_dogEditor_cancel"
        app:layout_constraintTop_toTopOf="@id/button_dogEditor_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>